tests/ui/async-await/issue-101715.stderr
error[E0277]: `()` is not a future
  --> $DIR/issue-101715.rs:11:10
   |
LL |       S.very_long_method_name_the_longest_method_name_in_the_whole_universe()
   |  ____________________________________________________________________________-
LL | |         .await
   | |          ^^^^-
   | |__________|___|
   |            |   help: remove the `.await`
   |            `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
   = note: required for `()` to implement `IntoFuture`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
